google maps API and other formatting

--- a/about.html
+++ b/about.html
@@ -168,7 +168,17 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 
+
+html {
+  scroll-behavior: smooth;
+}
+
 </style>
+
+
+<!-- favicon  -->
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
 
 </head>
 
@@ -222,7 +232,10 @@
                 <span class="section-heading-lower">About Us</span>
               </h2>
               <p>about us part 1</p>
-              <p class="mb-0">you can do things like this  <em>italic</em> in this section too </p>
+              <p class="mb-2">you can do things like this  <em>italic</em> in this section too </p>
+              <div class="intro-button mx-auto">
+                <a class="btn btn-primary btn-xl" href="#team">Meet the Team</a>
+              </div>
             </div>
           </div>
         </div>
@@ -236,9 +249,9 @@
 <!-- TEAM SECTION--->
   <section class="page-section cta">
         <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
+          <div class="cta-inner text-center rounded" id="team">
 
-<section class="team-area pb-100 pt-100" id="team">
+<section class="team-area pb-15 pt-15">
      <div class="container">
         <div class="row section-title">
            <div class="col-md-6 text-right">
@@ -261,7 +274,9 @@
                        </ul>
                     </div>
                  </div>
-                 <h4>Priyen Morjaria <span>Lead Prototyper</span></h4>
+                  Lead Prototyper <br>
+                 <span class="section-heading-upper">Priyen Morjaria </span> <br>
+                 Responsible for...
               </div>
            </div>
            <div class="col-md-3">
@@ -276,7 +291,9 @@
                        </ul>
                     </div>
                  </div>
-                 <h4>Lorenzo Bergamaschi <span>Lead Mechanical Engineer</span></h4>
+                 Lead Mechanical Engineer <br>
+                <span class="section-heading-upper">Lorenzo Bergamaschi </span> <br>
+                Responsible for...
               </div>
            </div>
            <div class="col-md-3">
@@ -291,7 +308,9 @@
                        </ul>
                     </div>
                  </div>
-                 <h4>Jake Reynolds <span>Lead Project Manager</span></h4>
+                 Project Manager <br>
+                <span class="section-heading-upper">Jake Reynolds </span> <br>
+                Responsible for...
               </div>
            </div>
            <div class="col-md-3">
@@ -306,7 +325,9 @@
                        </ul>
                     </div>
                  </div>
-                 <h4>Mina Oba<span>Lead Designer</span></h4>
+                 <em>Lead Designer</em>
+                <h5>Mina Oba </h5>
+                Responsible for...
               </div>
            </div>
         </div>
