--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   html {
     scroll-behavior: smooth;
   }
+
   </style>
+
+
 
   <!-- favicon  -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -32,8 +35,8 @@
 </head>
 
 
-
 <body>
+
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper mb-3">Bob the Builder</span>
@@ -77,10 +80,10 @@
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">a simple solution</span>
-            <span class="section-heading-lower"> Quick Lock </span>
+            <span class="section-heading-upper">A student's</span>
+            <span class="section-heading-lower"> Solution </span>
           </h2>
-          <p class="mb-3"> description of product in a few words
+          <p class="mb-3"> Are you renting a room in shared accomodation? Your bedroom door doesn"t have a lock to it? We have a solution for you!
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#product">Find out More</a>
@@ -141,6 +144,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
 
 </body>
 
