--- a/making.html
+++ b/making.html
@@ -20,6 +20,15 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
+  <!-- favicon  -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
+<style>
+#button{
+  display:inline-block;
+}
+</style>
+
 </head>
 
 <body>
@@ -60,7 +69,7 @@
     </div>
   </nav>
 
-  <section class="page-section">
+    <section class="page-section">
     <div class="container">
       <div class="product-item">
         <div class="product-item-title d-flex">
@@ -87,7 +96,7 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">section 6</span>
+              <span class="section-heading-upper">Section 6</span>
               <span class="section-heading-lower">domain name</span>
             </h2>
           </div>
@@ -95,7 +104,16 @@
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">describe the steps to register and setup a domain name for your website</p>
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-upper mb-3">How to register and setup a domain name</span>
+            </h2>
+            <p class="mb-0">
+              <ol>
+                <li>Choose an available domain name and extension</li>
+                <li>Choose how long you'd like to reserve the domain name for (year increments)</li>
+                <li>Buy the domain name through domain name registrars (such as GoDaddy, 123-reg, Namecheap, google domains etc.) </li>
+              </ol>
+            </p>
           </div>
         </div>
       </div>
