--- a/website.html
+++ b/website.html
@@ -20,6 +20,9 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
+  <!-- favicon  -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  
 </head>
 
 <body>
