--- a/index.html
+++ b/index.html
@@ -25,7 +25,39 @@
     scroll-behavior: smooth;
   }
 
+
+.text-box {
+	position: absolute;
+	top: 50%;
+	left: 15%;
+	right: 15%;
+	color: #fff;
+	text-align: center;
+	transform: translateY(-50%);
+}
+
   </style>
+
+<script>
+
+   wow = new WOW(
+      {
+        animateClass: 'animated',
+        offset:       100,
+        callback:     function(box) {
+          console.log("WOW: animating <" + box.tagName.toLowerCase() + ">")
+        }
+      }
+    );
+    wow.init();
+    document.getElementById('moar').onclick = function() {
+      var section = document.createElement('section');
+      section.className = 'section--purple wow fadeInDown';
+      this.parentNode.insertBefore(section, this);
+    };
+
+
+</script>
 
 
 
@@ -44,7 +76,7 @@
   </h1>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Stop&Lock</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,21 +85,21 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Project
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="making.html">About Us</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="making.html">The Making</a>
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Our Team</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="website.html">Website</a>
+            <a class="nav-link text-uppercase text-expanded" href="website.html">Additional Information</a>
           </li>
         </ul>
       </div>
@@ -83,7 +115,7 @@
             <span class="section-heading-upper">A student's</span>
             <span class="section-heading-lower"> Solution </span>
           </h2>
-          <p class="mb-3"> Are you renting a room in shared accomodation? Your bedroom door doesn"t have a lock to it? We have a solution for you!
+          <p class="mb-3"> Are you renting a room in shared accomodation? Your bedroom door doesn't have a lock to it? We have a solution for you!
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#product">Find out More</a>
@@ -93,19 +125,68 @@
     </div>
   </section>
 
-  <section class="page-section cta" id="product">
+  <section class="page-section cta" >
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <div class="cta-inner text-center rounded">
-            <h2 class="section-heading mb-4">
+          <div class="cta-inner text-center rounded" id="product">
+
+            <h2 class="section-heading">
               <span class="section-heading-upper">Our Product</span>
               <span class="section-heading-lower">Stop&Lock</span>
             </h2>
-            <p class="mb-0">Few paragraphs explaining our product <br>
-              paragraph 2 <br>
-              paragraph 3
-            </p>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+
+            <section>
+                <div id="slider-animation" class="carousel slide" data-ride="carousel">
+
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#slider-animation" data-slide-to="0" class="active"></li>
+                <li data-target="#slider-animation" data-slide-to="1"></li>
+                <li data-target="#slider-animation" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/firstprototype.jpg" alt="Prototype 1">
+                    <div class="text-box">
+                        <h2 class="wow slideInRight" data-wow-duration="2s">First Prototype</h2>
+                        <p class="wow slideInLeft" data-wow-duration="2s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/secondprototype.jpg" alt="Prototype 2">
+                <div class="text-box">
+                        <h2 class="wow slideInUp" data-wow-duration="4s" >This is samuel text</h2>
+                        <p class="wow fadeInDown" data-wow-duration="4s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/renderb.png" alt="CAD">
+                <div class="text-box">
+                        <h2 class="wow fadeInUp" data-wow-duration="4s">This is Airborne text</h2>
+                        <p class="wow fadeInUp" data-wow-duration="2s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
+                    </div>
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#slider-animation" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#slider-animation" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+
+            </div>
+
+            </section>
+
+
+
           </div>
         </div>
       </div>
@@ -145,7 +226,25 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<script>
+// STICKY NAVBAR When the user scrolls the page, execute myFunction
+window.onscroll = function() {myFunction()};
 
+// Get the navbar
+var navbar = document.getElementById("navbar");
+
+// Get the offset position of the navbar
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
 
 </body>
 
