Web design tools

--- a/about.html
+++ b/about.html
@@ -408,6 +408,9 @@ html {
       <div class="intro-button mx-auto">
         <a class="btn btn-primary btn-xl" href="contact.html">Get in Touch!</a>
       </div>
+      <div class="container">
+        <p class="m-0 small">This website uses cookies</p>
+      </div>
     </div>
 
     <div class="container">
