--- a/website.html
+++ b/website.html
@@ -23,6 +23,7 @@
   <!-- favicon  -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
+
 </head>
 
 <body>
@@ -69,15 +70,71 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">section 7</span>
-              <span class="section-heading-lower">good website: describe</span>
+              <span class="section-heading-upper">Tools used for</span>
+              <span class="section-heading-lower">Website Design</span>
             </h2>
-            <p class="mb-0">a) what you feel makes a good website <br>
-              b) what is accessibility and what considerations you should make for it? Look up what you should do for the visually impaired or color blind (audio option etc)<br>
-              c) what is GDPR and wjat considerations shoudld be made for privacy of your website <br>
-              d) what marketing steps would you take to drive people to look at your website <br>
-              e) the next steps you would take given more time for your product website - how would you expand and what steps you would take i.e. e-commerce, etc
-            </p>
+            <p class="mb-0">
+
+              <div class="container">
+              	<div class="row div_margin">
+                  <div class="col-md-3 col-sm-6 col-xs-12 cut_box1">
+                    <div class="cut_box1a">
+
+                      <h4><strong>Bootstrap</strong></h4><br><br>
+                        The bootstrap theme 'Business Casual' was used for the overall layout and theme of this website. This was chosen to keep colours and format consistent.
+                        <br><br><br><br><br>
+                    </div>
+                    <div class="intro-button mx-auto">
+                      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/business-casual/">Bootstrap theme</a>
+                    </div>
+                  </div>
+                  <!-- /.col-lg-4 -->
+                      <div class="col-md-3 col-sm-6 col-xs-12 cut_box1">
+                        <div class="cut_box1a">
+
+                          <h4><strong>Atom</strong></h4><br><br>
+                            Web development environment. <br>
+                            Used because this text editor has a pre-package with Github.
+                            <br><br><br><br><br><br><br><br>
+                        </div>
+                        <div class="intro-button mx-auto">
+                          <a class="btn btn-primary btn-xl" href="https://atom.io/">Download Atom</a>
+                        </div>
+                      </div>
+                  <!-- /.col-lg-4 -->
+
+                      <div class="col-md-3 col-sm-6 col-xs-12 cut_box1">
+                        <div class="cut_box1a">
+
+                          <h4><strong>Github Desktop</strong></h4><br>
+
+                            Tracks and organises workflow development. <br>
+                            Linked with atom and is easy to view commits made, pull requests, resolve merge conflicts. Also syntax highlights difference made in local changes.
+
+                        </div>
+                        <div class="intro-button mx-auto">
+                          <a class="btn btn-primary btn-xl" href="https://desktop.github.com/">Download Github Desktop</a>
+                        </div>
+                      </div>
+                  <!-- /.col-lg-4 -->
+                  <div class="col-md-3 col-sm-6 col-xs-12 cut_box1">
+                    <div class="cut_box1a">
+
+                      <h4><strong>Bootsnip</strong></h4><br><br>
+                        Templates for sections <br>
+                        Carousel sliders, navigation bars. Used for cowboy coding.
+                        <br><br><br><br><br><br><br><br>
+                    </div>
+                    <div class="intro-button mx-auto">
+                      <a class="btn btn-primary btn-xl" href="https://bootsnipp.com/">Bootsnip</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+              </p>
           </div>
         </div>
       </div>
@@ -170,7 +227,7 @@
     </div>
 
     <div class="container">
-        <p class="m-0 small" align="center">Copyright &copy; Mina 2019</p>
+      <p class="m-0 small">This website uses cookies</p>
     </div>
   </footer>
 
