--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
         }
 
     }
+
   </style>
 
 
@@ -117,7 +118,7 @@
 
                   	<div class="row">
                   	  <div class="col-md-7">
-                          <iframe src="https://maps.google.com/maps?q=Stadium%20House%2C%20Door%20A%2C%2068%20Wood%20Ln%2C%20London%20W12%207TA&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          <iframe src="https://maps.google.com/maps?q=Stadium%20House%2C%20Door%20A%2C%2068%20Wood%20Ln%2C%20London%20W12%207TA&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen alt="map"></iframe>
                           <h6> Scroll down to contact an individual member of the team</h6>
                         </div>
 
@@ -177,7 +178,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">This website uses cookies</p>
       </div>
     </footer>
 
