--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   </div>
 
   <div class="container">
-      <p class="m-0 small" align="center">Copyright &copy; Mina 2019</p>
+    <p class="m-0 small">This website uses cookies</p>
   </div>
 </footer>
 
